--- a/src/main/webapp/WEB-INF/views/error.html
+++ b/src/main/webapp/WEB-INF/views/error.html
@@ -11,7 +11,7 @@
     <div class="row justify-content-center">
         <div class="col-md-12 text-center">
             <span class="display-1 d-block">ERROR</span>
-            <div class="mb-4 lead"><p style="color: crimson" th:text="${message}"></p></div>
+            <div class="mb-4 lead error"><p style="color: crimson" th:text="${message}"></p></div>
             <a href="http://localhost:8080/" class="btn btn-link">Back to Home</a>
         </div>
     </div>
